--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -11,6 +11,12 @@ body{
         display: grid;
         grid-template-columns: 20% 80%;
     }
+    .landpage{
+        width: 100%;
+        height: 100vh;
+        display: grid;
+        grid-template-rows: 20% 80%;
+    }
     
 }
 
