Navbar on progress

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,3 +9,5 @@
 @import"./components/visitsMetrics";
 @import"./components/metrics";
 @import"./components/history";
+@import"./components/navbar";
+
