--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,4 +10,6 @@
 @import"./components/metrics";
 @import"./components/history";
 @import"./components/navbar";
-
+@import"./components/login";
+@import"./components/landingPage";
+@import"./components/signUpForm";
