The app is Done

--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar{
     height: 100%;
-    background: #1c8cfc;  
+    background: #349afff8; //#1c8cfc;  
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -25,7 +25,7 @@
             font-size: 1.5rem;
             text-decoration: none;
             color:white;
-            margin-left: .5rem;
+            margin-left: 0.5rem;
             transition: 0.2s ease-in-out;
         }
 
