--- a/src/scss/components/_history.scss
+++ b/src/scss/components/_history.scss
@@ -2,7 +2,9 @@
     margin: 1.5rem;
 }
 .report{
-    margin:0 30%;
+    margin-top: 2rem;
+    margin-left: 30%;
+    margin-right: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,7 +13,7 @@
     padding: 1rem;
     overflow-x: hidden;
     overflow-y: auto;
-    height: 75%;
+    height: 500px;
 
     .log{
         font-size: 1.3rem;
